# lunch-menu

./: .gitignore  App.py  Main.py  README.md  pyproject.toml
note/: Untitled.ipynb  endpoints.ipynb  kwargs.ipynb  lunch.ipynb  lunch.py
pages/: 0_Member_Data.py  1_input.py  2_analysis.py  2_status.py  3_bulk.py  4_criminal.py  5_Api.py  6_SYNC.py  9_old.py
src/lunch_menu/: db.py  keyword.py
