[project]
name = "lunch-menu"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "cho6019", email = "j01040864205@gmail.com"},
]
dependencies = ["pandas>=2.2.3", "streamlit>=1.41.1", "matplotlib>=3.10.0", "psycopg[binary,pool]>=3.2.4", "python-dotenv>=1.0.1", "pandasql>=0.7.3"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[dependency-groups]
eda = [
    "jupyterlab>=4.3.4",
]
dev = [
    "pytest>=8.3.4",
]
test = [
    "pytest>=8.3.4",
]


[tool.pdm]
distribution = true
include = ["fonts/*.ttf"]
